﻿Version 1.4 BETA

- StartConnectionTransferImpl transpiler by MacSergey
- Migrate to Harmony 2.0

Version 1.3.7 -

- Add additional sickness chance logging.


Version 1.3.6 -

- Fix to illness calculation


Version 1.3.5 -

- Add options panel slider for hearse chance
- Add options panel sliders for sickness probabilities by decile
- Add update notification
- Add Harmony prefix prioritisation for AdvancedOutsideConnection compatibility
- Update namespace and project hierachy


Version 1.3.4 -

- Fix average citizen age sometimes not displaying correctly.


Version 1.3.3 -

- Minor correction to childbearing age


Version 1.3.2 -

- Add configurable retirement age option (not applicable to legacy lifespan calculations)


Version 1.3.1 -

- Option panel changes now take effect immediately (not just on game load)


Version 1.3 -

- Add options panel
- Add choice of reverting to legacy (pre-1.13) lifespan calculations
- Move custom logging selection to options panel


Version 1.2 -

- Update lifecycle scaling to match game version 1.13
- Reimplement probability calculations using exponential (rather than logarithmic) calcs for improved probability accuracy
- Add option custom logfiles to log deaths, immigrant details, and/or transportation probability results
- Code cleanup
- Logging tweaks


Version 1.1.1 -

- Fix minor error with Harmony migration of NewOutsideConnectionAI


Version 1.1 -

- Migrated from redirection to Harmony
- XML configuration files now saved when save games are loaded, not after exit (compatibility with 'instant exit' process killing)
- Update logging
- Introduced formal versioning


Version 1.0 (unlabeled) -

- Initial upload
- Add check for old mod (via Steam Workshop subscription)