@@ -1,7 +1,9 @@
 ﻿Version 1.4 BETA
 
-- StartConnectionTransferImpl transpiler by MacSergey
 - Migrate to Harmony 2.0
+- Add StartConnectionTransferImpl Transpiler by MacSergey
+- Implement Harmony reverse patches for ResidentAI private methods
+
 
 Version 1.3.7 -
 
